first update of course materials

--- a/materials/PyTutorial_04_Visualization.ipynb
+++ b/materials/PyTutorial_04_Visualization.ipynb
@@ -4,15 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[`Gallery`](http://matplotlib.org/gallery.html)\n",
-    "\n",
-    "object-oriented interface\n",
-    "\n",
-    "PEP20, explicit is better than implicit\n",
-    "\n",
-    "plt.suptitle as the title for all subplots\n",
-    "\n",
-    "\"syntactic sugar\""
+    "# Python visualization\n",
+    "Author = R. Patrick Xian  \n",
+    "Date = 08/2017\n",
+    "## 1. matplotlib"
    ]
   },
   {
@@ -23,8 +18,30 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. mayavi"
    ]
   },
   {
