course materials update

--- a/materials/PyTutorial_04_Visualization.ipynb
+++ b/materials/PyTutorial_04_Visualization.ipynb
@@ -11,6 +11,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Figure](https://matplotlib.org/_images/anatomy.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
