--- a/materials/PyTutorial_02_Jupyter.ipynb
+++ b/materials/PyTutorial_02_Jupyter.ipynb
@@ -8,7 +8,7 @@
     "Author = R. Patrick Xian  \n",
     "Date = 08/2017  \n",
     "## 1. Notebook as development environment\n",
-    "#### Cell magic\n",
+    "### Cell magic\n",
     "The [complete manual](http://ipython.readthedocs.io/en/stable/interactive/magics.html) and [some examples](https://www.dataquest.io/blog/jupyter-notebook-tips-tricks-shortcuts/)"
    ]
   },
