course materials update

--- a/materials/PyTutorial_01_Basics.ipynb
+++ b/materials/PyTutorial_01_Basics.ipynb
@@ -127,6 +127,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 2. Loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 0\n",
+      "i = 1\n",
+      "i = 2\n",
+      "i = 3\n",
+      "i = 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print('i = {}'.format(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epicycloid has 2 i('s)\n",
+      "limaçon has 1 i('s)\n",
+      "trifolium has 2 i('s)\n",
+      "caustic has 1 i('s)\n"
+     ]
+    }
+   ],
+   "source": [
+    "curvelist = ['epicycloid', 'limaçon', 'trifolium', 'caustic']\n",
+    "for curve in curvelist:\n",
+    "    print(\"{} has {} i('s)\".format(curve, curve.count('i')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1503959718.499464\n",
+      "1503959718.499464\n",
+      "1503959718.499464\n",
+      "1503959718.499464\n",
+      "1503959718.499464\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import time\n",
+    "i = 0\n",
+    "while i < 5:\n",
+    "    print(time())\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Control flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "if x > 5:\n",
+    "    print()\n",
+    "elif x < 3:\n",
+    "    print()\n",
+    "else:\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input an integer\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    input('Input an integer') is None\n",
+    "except:\n",
+    "    raise Exception"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "## 2. Data types\n",
     "### 2.1 Object\n",
     "Every entity in Python is an object"
@@ -1561,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1586,12 +1706,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='<stdin>' mode='r' encoding='cp1252'>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.stdin"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1629,7 +1760,137 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. File I/O"
+    "## 5. File I/O\n",
+    "### 5.1 Built-in method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's your first name? Patrick\n",
+      "Hello Patrick!\n"
+     ]
+    }
+   ],
+   "source": [
+    "firstname = input(\"What's your first name? \")\n",
+    "print('Hello ' + firstname + '!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.2 scipy.io | [doc](https://docs.scipy.org/doc/scipy/reference/tutorial/io.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import scipy.io as sio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "names = ['Dijkstra', 'Minsky', 'Diffie', 'Pearl', 'Feigenbaum', 'Hoare']\n",
+    "years = [1972, 1969, 2015, 2011, 1994, 1980]\n",
+    "sio.savemat('TP.mat', {'names':names,'years':years})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('names', (6,), 'char'), ('years', (1, 6), 'int32')]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sio.whosmat('TP.mat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = sio.loadmat('TP.mat')\n",
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['names', 'years']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[k for k in data.keys() if not k.startswith('__')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.3 pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
    ]
   },
   {
@@ -1640,6 +1901,45 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.4 h5py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................x.......................s.......................................x....................................s........ss.ss...........................................................................................ssssss.................................................................x....x..x..................x.....x......................................ssssssssss............\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 423 tests in 2.238s\n",
+      "\n",
+      "OK (skipped=22, expected failures=7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=423 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import h5py\n",
+    "h5py.run_tests()"
+   ]
   },
   {
    "cell_type": "code",
