course materials update

--- a/materials/PyTutorial_02_Jupyter.ipynb
+++ b/materials/PyTutorial_02_Jupyter.ipynb
@@ -8,7 +8,7 @@
     "Author = R. Patrick Xian  \n",
     "Date = 08/2017  \n",
     "## 1. Notebook as development environment\n",
-    "### Cell magic\n",
+    "### 1.1 Cell magic\n",
     "The [complete manual](http://ipython.readthedocs.io/en/stable/interactive/magics.html) and [some examples](https://www.dataquest.io/blog/jupyter-notebook-tips-tricks-shortcuts/)"
    ]
   },
@@ -307,6 +307,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "print('Hello World!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 [notebook caching](http://ipython.org/ipython-doc/stable/interactive/reference.html#output-caching-system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -389,6 +426,15 @@
     "files = !ls\n",
     "files"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
