--- a/materials/PyTutorial_03_Numerics.ipynb
+++ b/materials/PyTutorial_03_Numerics.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "1.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "0.49999999999999994"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "(True, True)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "(1.3000000000000003, 1.3)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "(2.718281828459045, True)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,8 +214,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 basic math\n",
+    "Read the list of functions [here](https://docs.scipy.org/doc/numpy-1.13.0/reference/routines.math.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 numpy arrays\n",
+    "#### 2.2.1 array operations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -226,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +252,7 @@
        "          4.00000000e+00]), numpy.ndarray)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +291,7 @@
        "(4,)"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +311,7 @@
        "(1, 4)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +332,7 @@
        "(4,)"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +353,7 @@
        "          4.00000000e+00]])"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +373,7 @@
        "array([[ True,  True,  True,  True]], dtype=bool)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +393,7 @@
        "78.224999999999994"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +413,7 @@
        "array([  0,   9, 300,   4])"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +436,7 @@
        "       [  0,   9, 300,   4]])"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +458,7 @@
        "       [19,  8, 10,  7]])"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +479,7 @@
        "(3, 4)"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +499,7 @@
        "12"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +519,7 @@
        "array([ 1,  9,  3, 12,  0,  5,  4,  2, 19,  8, 10,  7])"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +539,7 @@
        "array([ 1,  9,  3, 12,  0,  5,  4,  2, 19,  8, 10,  7])"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +559,7 @@
        "(80, 0)"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +580,7 @@
        "       [ 4,  2, 19,  8, 10,  7]])"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +602,7 @@
        "       [19,  8, 10,  7]])"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +625,7 @@
        "       [12,  2,  7]])"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +648,7 @@
        "       [12,  2,  7]])"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +668,7 @@
        "1"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,12 +681,282 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 2.2.2 array indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  9,  3, 12],\n",
+       "       [ 0,  5,  4,  2],\n",
+       "       [19,  8, 10,  7]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  9,  3, 12])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1[0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1[0,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 5, 4, 2]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1[1:10:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9, 12, 19,  8, 10,  7])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1[arr1 > 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1],\n",
+       "       [0, 3],\n",
+       "       [2, 0],\n",
+       "       [2, 1],\n",
+       "       [2, 2],\n",
+       "       [2, 3]], dtype=int64)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Output the array indices\n",
+    "np.argwhere(arr1 > 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 0, 2, 2, 2, 2], dtype=int64),\n",
+       " array([1, 3, 0, 1, 2, 3], dtype=int64))"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(arr1 > 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9, 12, 19,  8, 10,  7])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1[_]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.3 array broadcasting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 linear algebra (numpy.linalg)\n",
+    "See the list of functions [here](https://docs.scipy.org/doc/numpy-1.13.0/reference/routines.linalg.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy.linalg import norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm([3,4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 array iterator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.5 masked array (numpy.ma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. scipy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -683,13 +969,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "import sci"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -745,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -756,71 +1038,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Elements</th>\n",
-       "      <th>Weight</th>\n",
-       "      <th>Z</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Hydrogen</td>\n",
-       "      <td>111</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Oxygen</td>\n",
-       "      <td>222</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Sulfur</td>\n",
-       "      <td>333</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Tungsten</td>\n",
-       "      <td>444</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Europium</td>\n",
-       "      <td>555</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Elements  Weight  Z\n",
-       "0  Hydrogen     111  0\n",
-       "1    Oxygen     222  1\n",
-       "2    Sulfur     333  2\n",
-       "3  Tungsten     444  3\n",
-       "4  Europium     555  4"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d = {'Elements':['Hydrogen', 'Oxygen', 'Sulfur', 'Tungsten', 'Europium'],\\\n",
     "     'Z':[0,1,2,3,4],\\\n",
@@ -890,13 +1110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import sympy as sp"
+    "import sympy as sym"
    ]
   },
   {
